fix:collection edit visible

--- a/src/assets/css/collection.less
+++ b/src/assets/css/collection.less
@@ -156,26 +156,20 @@
 @import './single-header.less';
 .m-collection-single {
 
+    .m-collection-detail-header{
+        .pr;
+        .u-private{
+            color:#fba524;
+        }
+    }
+
     .m-single-info{
         .u-icon{
             .fz(16px);
             .y(-1px);
             .mr(5px);
         }
-    }
-    
-    .m-collection-detail-header{
-        .pr;
-    }
-    .m-collection-detail-panel{
-        .pa;
-        right:0;
-        bottom:20px;
-    }
-    @media screen and (max-width:@phone){
-        .m-collection-detail-panel{
-            .ps;
-        }
+        
     }
     
     .m-collection-detail-content {
